# pico_w-remotes

./: 5remotes.sh  6remotes.sh  CMakeLists.txt  o-ocd.sh  pub-time  reset  run-iperf.sh
doc/: access-point.txt  changes-to-hosts.txt  chgs.txt  find-mac-results.txt  find-mac.sh  mqtt_notes.txt  run-iperf-results.txt  tests.txt
pico_w/: CMakeLists.txt
pico_w/access_point/: picow_access_point.c
pico_w/crc_crc16/: CMakeLists.txt
pico_w/crc_crc16/crc_crc16_lib/: crc.c
pico_w/freertos/: CMakeLists.txt
pico_w/freertos/iperf/: CMakeLists.txt  lifting.h  picow_freertos_iperf.c
pico_w/freertos/mqtt/: CMakeLists.txt  crc.h  lwipopts.h  mqtt_example.c  pw_ssid.h
pico_w/freertos/ping/: picow_freertos_ping.c
pico_w/iperf/: picow_iperf.c
pico_w/klt/: CMakeLists.txt
pico_w/klt/klt-lib/: base.h  klt.c  klt_util.c
pico_w/lifting/: CMakeLists.txt
pico_w/lifting/lifting-lib/: lifting.c
pico_w/ntp_client/: picow_ntp_client.c
pico_w/tcp_client/: picow_tcp_client.c
pico_w/tcp_server/: CMakeLists.txt  picow_tcp_server.c
pico_w/tcp_server-1/: CMakeLists.txt  notes-chg-tcp-port.txt  picow_tcp_server-1.c  pw_ssid.h
pico_w/tcp_server_pi/: CMakeLists.txt  client  client.c
pico_w/xmodem/: CMakeLists.txt
